--- a/template.html
+++ b/template.html
@@ -11,7 +11,13 @@
       <input type="text" />Enter Location!
       <button type="submit">Get Data</button>
       <div class="box">
-        <div class="info"></div>
+        <div class="info">
+          <p class="description"></p>
+          <p class="humidity"></p>
+          <p class="windspeed"></p>
+          <p class="tempmin"></p>
+          <p class="tempmax"></p>
+        </div>
       </div>
     </div>
     <script src="server.js"></script>
